# NEAT_pytorch

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
src/: data_loading.py  hp.py  monolayers.py  neat_model_class.py  torchfuns.py  tox.ini  toy.py  toy_chi.py  toy_torch.py  utils.py
