[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "neat_pytorch"
version = "0.0.1"
description = "NEAT Python"
authors = [
  { name = "Zeynep Odabas" }
  { name = "Pankhil Gawade" }
  { name = "Gamze Gizem Kasman" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=This folder contains the Pythhon implementation of NEAT using PyTorch, including a toy example and a hyperparameter search implementation."

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["neat_pytorch"]
force_sort_within_sections = true
